# obsidian-host

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_PLAN.md  README.md  TASK_6.1_COMPLETION.md  TASK_6.2_COMPLETION.md  TASK_6.3_COMPLETION.md  TASK_8.2_COMPLETION.md  check_output.txt  config.toml  docker-compose.yml  manual test results 2026 04  09 2139  obsidian-host.db  run.sh  start_server.ps1  test_output.txt
.claude/: settings.json
benches/: markdown_benchmarks.rs
crates/codex-server/: Cargo.toml
crates/codex-server/data/indices/3c0b3d05-9e2a-4e44-82c1-f465b51dc311/: .managed.json  meta.json
crates/codex-server/data/indices/5fc0c0a8-397b-4135-857b-66a06246caf9/: .managed.json  meta.json
crates/codex-server/data/indices/c56d11bb-8954-4a8a-b891-bd38fd36ae68/: .managed.json  meta.json
crates/codex-server/data/indices/d1d3d32d-291b-4289-aa1c-26a16553d768/: .managed.json  meta.json
crates/codex-server/data/indices/ff24564d-6948-40ec-9608-3785ddba9602/: .managed.json  meta.json
crates/codex-server/src/: lib.rs
crates/codex-server/src/config/: mod.rs
crates/codex-server/src/db/: mod.rs
crates/codex-server/src/middleware/: auth.rs  logging.rs  request_id.rs
crates/codex-server/src/models/: mod.rs  plugin.rs
crates/codex-server/src/routes/: admin.rs  api_keys.rs  auth.rs  entities.rs  files.rs  groups.rs  invitations.rs  markdown.rs  mod.rs  oidc.rs  plugins.rs  tags.rs  totp.rs  vaults.rs
crates/codex-server/src/services/: auth_provider.rs  entity_service.rs  file_service.rs  frontmatter_service.rs  label_service.rs  markdown_service.rs  ml_service.rs  mod.rs  oidc_provider.rs  plugin_api.rs  plugin_service.rs  reindex_service.rs  relation_service.rs  schema_service.rs  search_service.rs  template_service.rs
crates/codex-server/tests/: api_integration.rs  auth_group_sharing.rs  entity_api_tests.rs  ml_apply_undo_api.rs  preferences_per_user.rs  sync_verification.rs  worldbuilding_tests.rs
crates/obsidian-desktop/: Cargo.toml
crates/obsidian-desktop/src/: main.rs  state.rs  ui.rs
crates/obsidian-server/: Cargo.toml  build.rs
crates/obsidian-server/src/: main.rs
crates/obsidian-server/src/config/: mod.rs
crates/obsidian-server/src/db/: mod.rs
crates/obsidian-server/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/obsidian-server/src/models/: mod.rs
crates/obsidian-server/src/routes/: admin.rs  api_keys.rs  auth.rs  files.rs  groups.rs  health.rs  invitations.rs  mod.rs  oidc.rs  plugins.rs  preferences.rs  totp.rs  vaults.rs  version.rs  ws.rs
crates/obsidian-server/src/services/: auth_provider.rs  file_service.rs  image_service.rs  mod.rs  plugin_api.rs  plugin_service.rs  storage.rs
crates/obsidian-server/tests/: api_integration.rs  auth_group_sharing.rs  preferences_per_user.rs  sync_verification.rs
data/test_vault_1/: 202601250001.md  test-file-1.md
docs/: ADVANCED_FEATURES.md  API.md  ARCHITECTURE.md  BUILD.md  CALENDAR_INTEGRATION_PLAN.md  CANVAS_DATA_MODEL.md  CANVAS_EDITING_PLAN.md  CANVAS_INTEGRATION_PLAN.md  COLLECTIONS_SPEC.md  CONFIGURATION.md  CONTRIBUTING.md  DAILY_NOTES_IMPLEMENTATION.md  DATAVIEW_SPEC.md  DEPLOYMENT.md  DEPLOY_TUI.md  DESKTOP_FEATURE_PARITY_PLAN.md  DOCKER.md  FRONTMATTER_PLAN.md  GRAPH_VIEW_PLAN.md  MARKDOWN_TEST_COVERAGE.md  METADATA_QUERY_SYSTEM.md  PLAN-desktop-sync-multiuser.md  PLUGIN_API.md  PLUGIN_ARCHITECTURE.md  PLUGIN_UI_IMPLEMENTATION.md  PROPERTY_TYPES_SPEC.md  RANDOM_NOTE_IMPLEMENTATION.md  SAVED_SEARCH_SPEC.md  SEARCH_SYNTAX_SPEC.md  TAG_SYSTEM_SPEC.md  TASK_10.1_COMPLETION.md  TASK_6.2_COMPLETION.md  TASK_8.1_COMPLETION.md  TASK_9.1_COMPLETION.md  TASK_9.2_COMPLETION.md  TASK_9_COMPLETION.md  TEMPLATES_SYSTEM.md  TEST_PLAN.md  UI_TEST_PLAN.md  USER_GUIDE.md  (+3 more)
examples/: minimal_pyo3.rs  pyo3_test.rs
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/logs/: obsidian-host.log.2026-01-26
frontend/public/: index.html  login.html
frontend/src/: App.vue  app.ts
frontend/test-results/: .last-run.json
logs/: codex.log.2026-04-09  codex.log.2026-04-10  obsidian-host.log.2026-01-24  obsidian-host.log.2026-01-25  obsidian-host.log.2026-01-26  obsidian-host.log.2026-02-16  obsidian-host.log.2026-02-17  obsidian-host.log.2026-04-07
plugins/: .plugins_config.json  README.md
plugins/backlinks/: manifest.json
plugins/daily-notes/: main.js  manifest.json
plugins/example-plugin/: main.js  manifest.json
plugins/example-python/: main.py  manifest.json
plugins/word-count/: manifest.json
scripts/: build_release.ps1  build_release_linux.ps1  codex.py  deploy_tui.py
src/: assets.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/middleware/: auth.rs  logging.rs  mod.rs  security.rs
src/models/: auth.rs  graph.rs  mod.rs  plugin.rs
src/routes/: auth.rs  files.rs  health.rs  markdown.rs  mod.rs  plugins.rs  preferences.rs  search.rs  sync.rs  vaults.rs  ws.rs
src/services/: auth_service.rs  file_service.rs  frontmatter_service.rs  image_service.rs  markdown_service.rs  mod.rs  plugin_api.rs  plugin_service.rs  search_bench.rs  search_service.rs  vault_service.rs  wiki_link_service.rs
src/watcher/: mod.rs
test_vaults/vault_canvas/: Knowledge_Graph.canvas  Project_Flow.canvas  Simple_Canvas.canvas
test_vaults/vault_metadata/: documentation_update.md  project_alpha.md
test_vaults/vault_random_note/: Note1.md  Note2.md  Note3.md  Note4.md  Note5.md
tests/: api_integration_tests.rs  auth_tests.rs  block_ref_tests.rs  commonmark_tests.rs  concurrent_operations_tests.rs  conflict_tests.rs  database_operations_tests.rs  embed_tests.rs  error_handling_tests.rs  file_crud_integration_tests.rs  frontmatter_tests.rs  link_display_tests.rs  performance_tests.rs  preferences_tests.rs  rendering_verification_tests.rs  security_tests.rs  sync_tests.rs  tag_tests.rs  vault_api_tests.rs  vault_switching_tests.rs  websocket_notification_tests.rs  wiki_link_tests.rs
vaults/test-vault/: 2026-04-10.md  40k Lore Sources.md  (+1 more)
(+74 files in other folders)
