[package]
name = "obsidian-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-files = "0.6"
actix-ws = "0.3"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Markdown parsing
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "18.0"

# Syntax highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
regex = "1.11"

# Configuration
config = "0.14"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.14"
