[package]
name = "obsidian-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-files = "0.6"
actix-ws = "0.3"
actix-multipart = "0.7"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Markdown parsing
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "18.0"

# Syntax highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
tempfile = "3.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
regex = "1.11"
zip = "2.2"

# Configuration
config = "0.14"
dotenv = "0.15"
rand = "0.9.2"
rust-embed = "8.4"
mime_guess = "2.0"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

# Authentication (OAuth/OIDC)
openidconnect = { version = "3.5", features = ["reqwest"] }
sha2 = "0.10"
hex = "0.4"
wasmtime = "14.0"
async-trait = "0.1.89"
wasmtime-wasi = "14.0"
pyo3 = { version = "0.21.0", features = ["auto-initialize"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "markdown_benchmarks"
harness = false

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Abort on panic (reduces binary size by removing unwinding)
strip = true        # Strip symbols from binary

