[package]
name = "codex-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex"
path = "src/lib.rs"

[[bin]]
name = "codex"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = { version = "4.9", features = ["rustls-0_23"] }
actix-files = "0.6"
actix-ws = "0.3"
actix-multipart = "0.7"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# TLS support (optional server-side TLS via rustls)
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Markdown parsing
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "18.0"

# Syntax highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
regex = "1.11"
zip = "2.2"
tar = "0.4"
flate2 = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# TOTP / 2FA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
data-encoding = "2"

# OIDC / LDAP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ldap3 = "0.11"
urlencoding = "2"

# Utilities
rand = "0.9.2"
hex = "0.4"
sha2 = "0.10"
toml = { version = "0.8", features = ["parse"] }
rayon = "1.11.0"
rust-embed = "8.4"
mime_guess = "2.0"
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
] }
clap = { version = "4", features = ["derive", "env"] }
codex-types = { path = "../codex-types" }
bytes = "1"
tantivy = { version = "0.22", default-features = false, features = ["mmap"] }
jsonschema = { version = "0.28", default-features = false }

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"

[[bench]]
name = "markdown_benchmarks"
harness = false
path = "../../benches/markdown_benchmarks.rs"
